Prepare for Zeabur deployment: add root package.json, zbpack.json, fix dotenv path, update CORS and .gitignore

--- a/accounting-ecosystem/.gitignore
+++ b/accounting-ecosystem/.gitignore
@@ -1,8 +1,7 @@
 # Dependencies
 node_modules/
-package-lock.json
 
-# Environment
+# Environment (NEVER commit secrets)
 .env
 .env.local
 .env.*.local
