--- a/accounting-ecosystem/backend/.env.example
+++ b/accounting-ecosystem/backend/.env.example
@@ -2,9 +2,14 @@
 # Accounting Ecosystem - Environment Configuration
 # =============================================================================
 # Copy this file to .env and fill in your values
+#
+# ZEABUR DEPLOYMENT:
+#   Set these as Environment Variables in the Zeabur dashboard.
+#   Do NOT commit a .env file with real credentials to Git.
+# =============================================================================
 
-# MOCK MODE — Set to true to run without Supabase (in-memory test data)
-# Set to false when you have real Supabase credentials
+# MOCK MODE — Set to true to run without a database (in-memory test data)
+# Set to false for production with real Supabase/PostgreSQL
 # See TEST-CREDENTIALS.md for test login accounts
 MOCK_MODE=true
 
@@ -13,21 +18,32 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=your-service-role-key-here
 SUPABASE_ANON_KEY=your-anon-key-here
 
+# Zeabur PostgreSQL Database (optional alternative to Supabase)
+# DATABASE_URL=postgresql://user:pass@host:port/dbname
+
 # JWT Authentication
 JWT_SECRET=change-this-to-a-strong-random-secret-min-32-chars
 
+# SEAN AI Module Configuration
+SEAN_DEFAULT_KEY=change-this-to-a-random-key
+
 # Module Activation (true = enabled, false = disabled)
 MODULE_POS_ENABLED=true
-MODULE_PAYROLL_ENABLED=false
-MODULE_ACCOUNTING_ENABLED=false
+MODULE_PAYROLL_ENABLED=true
+MODULE_ACCOUNTING_ENABLED=true
+MODULE_SEAN_ENABLED=true
 
 # Server Configuration
+# PORT is auto-set by Zeabur — do not hardcode in production
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
-# Frontend URLs (for CORS)
-FRONTEND_POS_URL=http://localhost:5173
-FRONTEND_PAYROLL_URL=http://localhost:5174
+# Production App URL (for CORS — set to your Zeabur domain)
+# APP_URL=https://your-app.zeabur.app
+
+# Frontend URLs (for CORS — only needed if frontends are separate services)
+# FRONTEND_POS_URL=https://pos.your-domain.com
+# FRONTEND_PAYROLL_URL=https://payroll.your-domain.com
 
 # Optional: Default company creation (set to false after first run)
 CREATE_DEFAULT_COMPANY=false
